fix(toolbar): remove scrollbar on IE edge

--- a/frontend/src/styles/_button.scss
+++ b/frontend/src/styles/_button.scss
@@ -101,7 +101,7 @@
         padding: 0 0 0 13px;
         top: -1px;
         left: -5px;
-        margin-right: -9px;
+        margin-right: -5px;
         &:hover, &:focus {
             border-color: rgba(255,255,255,1);
             opacity: 1;
